@@ -1,3 +1,9 @@
+2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b69
+
+        * Fix: I believe that this should fix the issue that some users have
+          had with extremely large Gallery installations during the upgrade
+          script, where the albums just don't show up on the page at all.
+
 2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b68
 
         * Fix: Display the 'view comments in nested album' links for all users
